--- a/views/templates/teamview.html
+++ b/views/templates/teamview.html
@@ -84,7 +84,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
 		<h2>Abwehr</h2>
 		<ul>
 	  <!-- ###TEAM_PLAYERLISTDEFENCE### begin -->
-		<li>###TEAM_PLAYERLISTDEFENCE_DCNAME###
+		<li>###TEAM_PLAYERLISTDEFENCE_DCNAME###</li>
 	  <!-- ###TEAM_PLAYERLISTDEFENCE### end -->
 		</ul>
 	  <!-- ###TEAM_PLAYERLISTDEFENCES### end -->
@@ -93,7 +93,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
 		<h2>Mittelfeld</h2>
 		<ul>
 	  <!-- ###TEAM_PLAYERLISTMIDFIELD### begin -->
-		<li>###TEAM_PLAYERLISTMIDFIELD_DCNAME###
+		<li>###TEAM_PLAYERLISTMIDFIELD_DCNAME###</li>
 	  <!-- ###TEAM_PLAYERLISTMIDFIELD### end -->
 		</ul>
 	  <!-- ###TEAM_PLAYERLISTMIDFIELDS### end -->
@@ -102,7 +102,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
 		<h2>Angriff</h2>
 		<ul>
 	  <!-- ###TEAM_PLAYERLISTOFFENCE### begin -->
-		<li>###TEAM_PLAYERLISTOFFENCE_DCNAME###
+		<li>###TEAM_PLAYERLISTOFFENCE_DCNAME###</li>
 	  <!-- ###TEAM_PLAYERLISTOFFENCE### end -->
 		</ul>
 	  <!-- ###TEAM_PLAYERLISTOFFENCES### end -->
