--- a/views/templates/teamview.html
+++ b/views/templates/teamview.html
@@ -80,6 +80,15 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
 
   <div>
   	<!-- Beispiel für dynamische Listen auf Basis von TeamNotes -->
+	  <!-- ###TEAM_PLAYERLISTGOALKEEPERS### begin -->
+		<h2>Tor</h2>
+		<ul>
+	  <!-- ###TEAM_PLAYERLISTGOALKEEPER### begin -->
+		<li>###TEAM_PLAYERLISTGOALKEEPER_DCNAME###</li>
+	  <!-- ###TEAM_PLAYERLISTGOALKEEPER### end -->
+		</ul>
+	  <!-- ###TEAM_PLAYERLISTGOALKEEPERS### end -->
+	  
 	  <!-- ###TEAM_PLAYERLISTDEFENCES### begin -->
 		<h2>Abwehr</h2>
 		<ul>
