#44 MatchNotes with SimpleMarker and example for goals list

--- a/views/templates/matchreport.html
+++ b/views/templates/matchreport.html
@@ -73,6 +73,20 @@
 </div>
 
 
+###MATCH_GOALS###
+<h3>Die Tore</h3>
+###MATCH_GOAL###
+<div class="col-sm-6">
+###MATCH_GOAL_ISGOAL_YES###
+        ###MATCH_GOAL_MINUTE### ###MATCH_GOAL_DCSCORE###: TOR durch ###MATCH_GOAL_PLAYER_DCNAME### 
+###MATCH_GOAL_ISGOAL_YES###
+###MATCH_GOAL_ISGOALOWN_YES###
+        ###MATCH_GOAL_MINUTE### ###MATCH_GOAL_DCSCORE###: Eigentor durch ###MATCH_GOAL_PLAYER_DCNAME### 
+###MATCH_GOAL_ISGOALOWN_YES###
+</div>
+###MATCH_GOAL###
+###MATCH_GOALS###
+
 ###MATCH_TICKERS###
 <h2>Das Spielstenogramm</h2>
 <div id="cfcleague-report-ticker">
