Show icons in ticker list

--- a/views/templates/matchreport.html
+++ b/views/templates/matchreport.html
@@ -98,7 +98,7 @@
 	</div>
 	<div class="t3s-ticker-msg">
 		<p class="t3s-ticker-comment">
-		###MATCH_TICKER_DCMESSAGE###</p>
+	  ###MATCH_TICKER_DCICON### ###MATCH_TICKER_DCMESSAGE###</p>
 	</div>
 	###MATCH_TICKER###
 </div>
