Disable automatic toUserInt due to infinite loop

--- a/views/templates/leaguetable.html
+++ b/views/templates/leaguetable.html
@@ -57,7 +57,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 ###LEAGUE_TABLE###
 
 ###SPORTS_FOOTBALL###
-<h2>###LEAGUE_NAME###</h2>
+<h2>###LEAGUE_NAME### ###LEAGUE_LOGO###</h2>
 
 <!-- ###CONTROLS### start -->
 <div class="cfcleague-scopeselection">
