Chart rendering optimized

--- a/views/templates/tablechart.html
+++ b/views/templates/tablechart.html
@@ -202,6 +202,7 @@ jQuery(document).ready(function(){
 			xaxis: {max: chartData.xmax},
 			yaxis: {
 				min: 1,
+				max: chartData.ymax,
 				tickDecimals: 0,
 				ticks: 18,
 				transform: function (v) { return -v; },
