Respect GDPR and possible to show day of death

--- a/views/templates/profileview.html
+++ b/views/templates/profileview.html
@@ -28,7 +28,7 @@
 
 <!-- ###PROFILE### start-->
 <tr>
-  <td>###PROFILE_SHOWPROFILELINK######PROFILE_LAST_NAME###, ###PROFILE_FIRST_NAME######PROFILE_SHOWPROFILELINK### ###PROFILE_FIRSTPICTURE###</td>
+  <td>###PROFILE_SHOWPROFILELINK######PROFILE_DCNAMEREV######PROFILE_SHOWPROFILELINK### ###PROFILE_FIRSTPICTURE###</td>
   <td>###PROFILE_BIRTHDAY###</td>
   <td>###PROFILE_SUMMARY###</td>
 </tr>
@@ -104,7 +104,13 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 
 ###PROFILE_FIRSTPICTURE###
 <dl class="dl-horizontal">
+  ###PROFILE_ISGDPR0_YES###
   <dt>Geburtsdatum:</dt><dd>###PROFILE_BIRTHDAY###</dd>
+  ###PROFILE_ISDIED_YES###
+  <dt>gestorben:</dt><dd>###PROFILE_DAYOFDEATH###</dd>
+  ###PROFILE_ISDIED_YES###
+  ###PROFILE_ISGDPR0_YES###
+
   <dt>Nationalit&auml;t:</dt><dd>###PROFILE_NATIONALITY###</dd>
   <dt>Gr&ouml;&szlig;e:</dt><dd>###PROFILE_HEIGHT### cm</dd>
   <dt>Gewicht:</dt><dd>###PROFILE_WEIGHT### kg</dd>
