--- a/views/templates/teamview.html
+++ b/views/templates/teamview.html
@@ -65,7 +65,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
    <tr class="cfcleague-row###TEAM_PLAYER_ROLL### ">
     <td>###TEAM_PLAYER_FIRSTPICTURE###<br />###TEAM_PLAYER_TNPICTURE###</td>
     <td>###TEAM_PLAYER_TNPOSITION### / ###TEAM_PLAYER_TNTRIKOT###</td>
-    <td>###TEAM_PLAYER_SHOWPROFILELINK######TEAM_PLAYER_LAST_NAME###, ###TEAM_PLAYER_FIRST_NAME######TEAM_PLAYER_SHOWPROFILELINK### (###TEAM_PLAYER_UID###)</td>
+    <td>###TEAM_PLAYER_SHOWPROFILELINK######TEAM_PLAYER_DCNAMEREV######TEAM_PLAYER_SHOWPROFILELINK### (###TEAM_PLAYER_UID###)</td>
     <td>###TEAM_PLAYER_BIRTHDAY###</td>
     <td>###TEAM_PLAYER_HEIGHT###</td>
     <td>###TEAM_PLAYER_WEIGHT###</td>
@@ -128,7 +128,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
    </tr>
     <!-- ###TEAM_COACH### begin -->
    <tr class="cfcleaguefe-teamview-coach">
-    <td>###TEAM_COACH_SHOWPROFILELINK######TEAM_COACH_LAST_NAME###, ###TEAM_COACH_FIRST_NAME######TEAM_COACH_SHOWPROFILELINK###</td>
+    <td>###TEAM_COACH_SHOWPROFILELINK######TEAM_COACH_DCNAMEREV######TEAM_COACH_SHOWPROFILELINK###</td>
     <td>###TEAM_COACH_BIRTHDAY###</td>
    </tr>
     <!-- ###TEAM_COACH### end -->
@@ -147,7 +147,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
    </tr>
     <!-- ###TEAM_SUPPORTER### begin -->
    <tr class="cfcleaguefe-teamview-coach">
-    <td>###TEAM_SUPPORTER_SHOWPROFILELINK######TEAM_SUPPORTER_LAST_NAME###, ###TEAM_SUPPORTER_FIRST_NAME######TEAM_SUPPORTER_SHOWPROFILELINK### (###TEAM_SUPPORTER_POSITION###)</td>
+    <td>###TEAM_SUPPORTER_SHOWPROFILELINK######TEAM_SUPPORTER_DCNAMEREV######TEAM_SUPPORTER_SHOWPROFILELINK### (###TEAM_SUPPORTER_POSITION###)</td>
     <td>###TEAM_SUPPORTER_BIRTHDAY###</td>
    </tr>
     <!-- ###TEAM_SUPPORTER### end -->
