#70 add table strategy for points per match

--- a/views/templates/leaguetable.html
+++ b/views/templates/leaguetable.html
@@ -47,6 +47,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 ###ROW_SHOWTEAMLINK### Subpart für Link auf die Teamdarstellung
 ###ROW_SHOWMATCHTABLELINK### Subpart für Link auf Teamspielplan
 ###ROW_MATCHCOUNT### Marker für Anzahl der Spiele
+###ROW_PPM### Marker für Anzahl Punkte pro Spiel
 </pre>
 
 
@@ -107,7 +108,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
   <td>###ROW_LOSECOUNT###</td>
   <td>###ROW_GOALS1###:###ROW_GOALS2###</td>
   <td>###ROW_GOALS_DIFF###</td>
-  <td>###ROW_POINTS######ROW_POINTS2###</td>
+  <td>###ROW_POINTS######ROW_POINTS2### (###ROW_PPM###)</td>
 </tr>
 ###ROW###
 </table>
