Move statistic classes and fix league table in match report #75

--- a/Resources/Private/Templates/Html/matchreport.html
+++ b/Resources/Private/Templates/Html/matchreport.html
@@ -109,12 +109,15 @@
   </div>
 
 
+<h2>Spieltags-Tabelle mit hervorgehobenen Teams</h2>
 ###MATCH_LEAGUETABLE###
 
+<h2>Teams im direkten Tabellenverlauf</h2>
 ###MATCH_CHARTMATCH###
 
 ###MATCH_MATCHHISTORY###
 
+<h2>Weitere Begegnungen des Spieltags</h2>
 ###MATCH_MTCURRENTROUND###
 
 ###MATCHREPORT###
