#57 migrate alltime table view

--- a/Resources/Private/Templates/Html/leaguetableAllTime.html
+++ b/Resources/Private/Templates/Html/leaguetableAllTime.html
@@ -54,7 +54,7 @@ Notice: Each ROW is here an object of type club!
 
 ###ROWS###
 <div class="cfcleague-leaguetable">
-<table cellspacing="0" cellpadding="0" class="cfcleague-leaguetable">
+<table class="table table-striped">
 <tr>
   <th>Pl.</th><th>Verein</th><th>Spiele</th><th>S</th><th>U</th><th>N</th><th>Tore</th><th>Diff</th><th>Punkte</th>
 </tr>
