#77 fix logos and table controls in leaguetable all-time

--- a/Resources/Private/Templates/Html/leaguetableAllTime.html
+++ b/Resources/Private/Templates/Html/leaguetableAllTime.html
@@ -36,16 +36,16 @@ Notice: Each ROW is here an object of type club!
 <div class="cfcleague-scopeselection">
 ###CONTROL_TABLETYPE###
 <p>
-###CONTROL_TABLETYPE_NORMAL_LINK### ###CONTROL_TABLETYPE_NORMAL### ###CONTROL_TABLETYPE_NORMAL_LINK###
-###CONTROL_TABLETYPE_HOME_LINK### ###CONTROL_TABLETYPE_HOME### ###CONTROL_TABLETYPE_HOME_LINK###
-###CONTROL_TABLETYPE_AWAY_LINK### ###CONTROL_TABLETYPE_AWAY### ###CONTROL_TABLETYPE_AWAY_LINK###
+###CONTROL_TABLETYPE_NORMAL_LINK### ###LABEL_TABLETYPE_NORMAL### ###CONTROL_TABLETYPE_NORMAL_LINK###
+###CONTROL_TABLETYPE_HOME_LINK### ###LABEL_TABLETYPE_HOME### ###CONTROL_TABLETYPE_HOME_LINK###
+###CONTROL_TABLETYPE_AWAY_LINK### ###LABEL_TABLETYPE_AWAY### ###CONTROL_TABLETYPE_AWAY_LINK###
 </p>
 ###CONTROL_TABLETYPE###
 
 ###CONTROL_POINTSYSTEM###
 <p>
-###CONTROL_POINTSYSTEM_POINT3_LINK### ###CONTROL_POINTSYSTEM_POINT3### ###CONTROL_POINTSYSTEM_POINT3_LINK###
-###CONTROL_POINTSYSTEM_POINT2_LINK### ###CONTROL_POINTSYSTEM_POINT2### ###CONTROL_POINTSYSTEM_POINT2_LINK###
+###CONTROL_POINTSYSTEM_POINT3_LINK### ###LABEL_POINTSYSTEM_POINT3### ###CONTROL_POINTSYSTEM_POINT3_LINK###
+###CONTROL_POINTSYSTEM_POINT2_LINK### ###LABEL_POINTSYSTEM_POINT2### ###CONTROL_POINTSYSTEM_POINT2_LINK###
 </p>
 ###CONTROL_POINTSYSTEM###
 
