modify template for short table

--- a/Resources/Private/Templates/Html/leaguetable_teaser.html
+++ b/Resources/Private/Templates/Html/leaguetable_teaser.html
@@ -22,13 +22,13 @@ zugegriffen werden. Dieses Template liegt also nur als kleines Beispiel bei.
 <!-- ###LEAGUE_TABLE### start -->
 <div class="cfcleague-teaser">
 ###ROWS###
+<table class="table table-striped">
 ###ROW###
-
-<p class="###ROW_MARKCLUB###">
-###ROW_POSITION###. ###ROW_SHORT_NAME###<br />
-</p>
-
+<tr>
+<td>###ROW_POSITION###.</td><td><span class="###ROW_MARKCLUB###">###ROW_SHORT_NAME###</span></td>
+</tr>
 ###ROW###
+</table>
 ###ROWS###
 </div>
 <!-- ###LEAGUE_TABLE### end -->
