Fix PHP warnings

--- a/Resources/Private/Templates/Html/profileview.html
+++ b/Resources/Private/Templates/Html/profileview.html
@@ -18,8 +18,8 @@
 <div id="cfcleague-profilelist">
 
 <!-- ###PROFILES### start-->
-<table class="cfcleague-profilelist-pagertable">
-<tr><td colspan="3" class="cfcleague-profilelist-pager">
+<table class="table table-striped">
+<tr><td colspan="3">
 <!-- ###CHARBROWSER### begin-->
 <span class="cfcleague-profilelist-pagerlink">###PB_ITEM_LINK######PB_ITEM######PB_ITEM_LINK###</span>
 <span class="cfcleague-profilelist-pagersize">###PB_ITEM_LINK###(###PB_ITEM_SIZE###)###PB_ITEM_LINK###</span>
