Fix rendering of empty profile lists

--- a/Resources/Private/Templates/Html/teamview.html
+++ b/Resources/Private/Templates/Html/teamview.html
@@ -121,7 +121,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
   <!-- ###TEAM_COACHS### begin -->
   <div class="cfcleague-teamview-coaches">
   <h2>Die Trainer</h2>
-  <table style="table table-striped">
+  <table class="table table-striped">
    <tr>
     <th>Name,Vorname</th>
     <th>geb.am</th>
@@ -140,7 +140,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
   <!-- ###TEAM_SUPPORTERS### begin -->
   <div class="cfcleague-teamview-supporters">
   <h2>Die Betreuer</h2>
-  <table style="table table-striped">
+  <table class="table table-striped">
    <tr>
     <th>Name,Vorname</th>
     <th>geb.am</th>
