Add video assists in fixtures digedag/cfc_league#74

--- a/Resources/Private/Templates/Html/matchreport.html
+++ b/Resources/Private/Templates/Html/matchreport.html
@@ -20,6 +20,7 @@
  Datum: <b>###MATCH_DATE###</b><br />
  Schiedsrichter: <b>###MATCH_REFEREENAMES###</b><br />
  SRA: <b>###MATCH_ASSISTSNAMES###</b><br />
+ SRA: <b>###MATCH_VIDEOASSISTSNAMES###</b><br />
  Zuschauer: <b>###MATCH_VISITORS###</b><br />
 </td>
 <td class="cfcleague-report-teamname">###MATCH_GUEST_NAME###</td>
