digedag/cfc_league#99 Add judo as sports

--- a/Resources/Private/Templates/Html/leaguetable.html
+++ b/Resources/Private/Templates/Html/leaguetable.html
@@ -323,7 +323,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 <div class="cfcleague-leaguetable">
 <table class="table table-striped">
 <tr>
-  <th>Pl.</th><th>###LABEL_CLUB###</th><th>###LABEL_MATCHES###</th><th>S</th><th>U</th><th>N</th><th>###LABEL_BALLS###</th><th>###LABEL_DIFF###</th><th>###LABEL_SETS###</th><th>###LABEL_DIFF###</th><th>###LABEL_POINTS###</th>
+  <th>Pl.</th><th>###LABEL_CLUB###</th><th>###LABEL_MATCHES###</th><th>S</th><th>U</th><th>N</th><th>###LABEL_SUBSCORES###</th><th>###LABEL_FIGHTS###</th><th>###LABEL_POINTS###</th>
 </tr>
 
 ###ROW###
@@ -334,10 +334,8 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
   <td>###ROW_WINCOUNT###</td>
   <td>###ROW_DRAWCOUNT###</td>
   <td>###ROW_LOSECOUNT###</td>
-  <td>###ROW_BALLS1###:###ROW_BALLS2###</td>
-  <td>###ROW_BALLS_DIFF######ROW_BALLS_QUOT###</td>
-  <td>###ROW_SETS1###:###ROW_SETS2###</td>
-  <td>###ROW_SETS_DIFF######ROW_SETS_QUOT###</td>
+  <td>###ROW_SCORES1###:###ROW_SCORES2###</td>
+  <td>###ROW_FIGHTS1###:###ROW_FIGHTS2###</td>
   <td>###ROW_POINTS######ROW_POINTS2###</td>
 </tr>
 ###ROW###
