digedag/cfc_league#99 Add judo as sports

--- a/Resources/Private/Templates/Html/leaguetable.html
+++ b/Resources/Private/Templates/Html/leaguetable.html
@@ -323,7 +323,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 <div class="cfcleague-leaguetable">
 <table class="table table-striped">
 <tr>
-  <th>Pl.</th><th>###LABEL_CLUB###</th><th>###LABEL_MATCHES###</th><th>S</th><th>U</th><th>N</th><th>###LABEL_SUBSCORES###</th><th>###LABEL_FIGHTS###</th><th>###LABEL_POINTS###</th>
+  <th>Pl.</th><th>###LABEL_CLUB###</th><th>###LABEL_ENCOUNTERS###</th><th>S</th><th>U</th><th>N</th><th>###LABEL_SCORES###</th><th>###LABEL_FIGHTS###</th><th>###LABEL_POINTS###</th>
 </tr>
 
 ###ROW###
