--- a/Resources/Private/Templates/Html/leaguetable.html
+++ b/Resources/Private/Templates/Html/leaguetable.html
@@ -283,6 +283,79 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 
 ###SPORTS_VOLLEYBALL###
 
+<!-- ------------------------------- -->
+<!-- ------------------------------- -->
+
+###SPORTS_JUDO###
+
+<h2>###LEAGUE_NAME###</h2>
+
+<!-- ###CONTROLS### start -->
+<div class="cfcleague-scopeselection">
+###CONTROL_TABLETYPE###
+<p>
+###CONTROL_TABLETYPE_NORMAL_LINK### ###LABEL_TABLETYPE_NORMAL### ###CONTROL_TABLETYPE_NORMAL_LINK###
+###CONTROL_TABLETYPE_HOME_LINK### ###LABEL_TABLETYPE_HOME### ###CONTROL_TABLETYPE_HOME_LINK###
+###CONTROL_TABLETYPE_AWAY_LINK### ###LABEL_TABLETYPE_AWAY### ###CONTROL_TABLETYPE_AWAY_LINK###
+</p>
+###CONTROL_TABLETYPE###
+
+###CONTROL_TABLESCOPE###
+<p>
+###CONTROL_TABLESCOPE_NORMAL_LINK### ###LABEL_TABLESCOPE_NORMAL### ###CONTROL_TABLESCOPE_NORMAL_LINK### 
+###CONTROL_TABLESCOPE_FIRST_LINK### ###LABEL_TABLESCOPE_FIRST### ###CONTROL_TABLESCOPE_FIRST_LINK### 
+###CONTROL_TABLESCOPE_SECOND_LINK### ###LABEL_TABLESCOPE_SECOND### ###CONTROL_TABLESCOPE_SECOND_LINK###
+</p>
+###CONTROL_TABLESCOPE###
+
+###CONTROL_POINTSYSTEM###
+<p>
+###CONTROL_POINTSYSTEM_POINT3_LINK### ###LABEL_POINTSYSTEM_POINT3### ###CONTROL_POINTSYSTEM_POINT3_LINK###
+###CONTROL_POINTSYSTEM_POINT2_LINK### ###LABEL_POINTSYSTEM_POINT2### ###CONTROL_POINTSYSTEM_POINT2_LINK###
+</p>
+###CONTROL_POINTSYSTEM###
+
+</div>
+<!-- ###CONTROLS### end -->
+
+
+###ROWS###
+<div class="cfcleague-leaguetable">
+<table class="table table-striped">
+<tr>
+  <th>Pl.</th><th>###LABEL_CLUB###</th><th>###LABEL_ENCOUNTERS###</th><th>S</th><th>U</th><th>N</th><th>###LABEL_SCORES###</th><th>###LABEL_FIGHTS###</th><th>###LABEL_POINTS###</th>
+</tr>
+
+###ROW###
+<tr class="cfcleague-leaguetable-row###ROW_ROLL### ###ROW_MARKCLUB### cfcleague-leaguetable-row_###ROW_MARK###">
+  <td>###ROW_POSITION###. (###ROW_OLDPOSITION###)</td>
+  <td>###ROW_LOGO### ###ROW_SHOWTEAMLINK######ROW_NAME######ROW_PENALTIES######ROW_SHOWTEAMLINK### (###ROW_SHOWMATCHTABLELINK######LABEL_MATCHTABLE######ROW_SHOWMATCHTABLELINK###)</td>
+  <td>###ROW_MATCHCOUNT###</td>
+  <td>###ROW_WINCOUNT###</td>
+  <td>###ROW_DRAWCOUNT###</td>
+  <td>###ROW_LOSECOUNT###</td>
+  <td>###ROW_SCORES1###:###ROW_SCORES2###</td>
+  <td>###ROW_FIGHTS1###:###ROW_FIGHTS2###</td>
+  <td>###ROW_POINTS######ROW_POINTS2###</td>
+</tr>
+###ROW###
+</table>
+</div>
+###ROWS###
+
+<!-- ###PENALTIES### start -->
+<div class="cfcleague-leaguetable-comments">
+
+<h3>Hinweise</h3>
+<!-- ###PENALTY### start -->
+<p class="cfcleague-leaguetable-comment">* ###PENALTY_COMMENT###
+</p>
+<!-- ###PENALTY### end -->
+</div>
+<!-- ###PENALTIES### end -->
+
+###SPORTS_JUDO###
+
 ###LEAGUE_TABLE###
 
 
