Bugfix flot not loaded in TYPO3 12

--- a/Resources/Private/Templates/Html/tablechart.html
+++ b/Resources/Private/Templates/Html/tablechart.html
@@ -142,10 +142,8 @@ http://www.flotcharts.org/
 
 </style>
 
-<script type="text/javascript" src="/typo3conf/ext/rn_base/Resources/Public/JavaScript/Flot/jquery.flot.min.js"></script>
-
 <script type="text/javascript">
-
+// note: jquery.flot is loaded by typoscript
 jQuery(document).ready(function(){
 	var chartData = ###JSON###;
 	var series = [];
